FIX(feat): URL Route Path

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://binaryhexa.github.io/sea-salon/",
+  "homepage": "https://binaryhexa.github.io/SEA_Salon/",
   "name": "package",
   "private": true,
   "version": "0.0.0",
